# JetbotTank

./: .gitignore  LICENSE.md  README.md  notas.txt  ros_2_notes  windows_notes.txt
ControlClient/: Jetbot_Joystick.py  configsJetBotClient.json  joystickUtills.py  testCVurl.py
Firmwares/IMU_Firmware/: IMU_Firmware.ino
Firmwares/STM32_TankFirmware1/: .cproject  .mxproject  .project  Important notes for flashing.txt  README.md  STM32F411CE_FLASH.ld  STM32_TankFirmware1.elf.launch  STM32_TankFirmware1.ioc
Firmwares/STM32_TankFirmware1/Debug/: STM32_TankFirmware1.elf  STM32_TankFirmware1.hex  STM32_TankFirmware1.list  STM32_TankFirmware1.map
Firmwares/STM32_TankFirmware1/Debug/Middlewares/: .gitignore
Firmwares/STM32_TankFirmware1/Debug/Src/: HAL_STM32_CONTROL.su  HAL_STM32_PWM.su  HAL_STM32_USB.su  main.su  tim.su  usbd_cdc_if.su
Firmwares/STM32_TankFirmware1/Inc/: i2c.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usbd_cdc_if.h
Firmwares/STM32_TankFirmware1/Src/: HAL_STM32_CONTROL.c  HAL_STM32_CONTROL.h  HAL_STM32_PWM.c  HAL_STM32_PWM.h  HAL_STM32_USB.c  HMC5883L.c  VBAT_Adc.c  VBAT_Adc.h  adc.c  controlcmds.h  debug_utils.h  encoder_utils.h  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usbd_cdc_if.c  usbd_conf.c
Firmwares/XV_Lidar_Controller/: XV_Lidar_Controller.ino
JetbotServer/: BaseVideoService.py  CameraHttpServer.py  SerialSocketReceiver.py  baseConfigs.py  baseStateMessage.py  cameraServerController.py  client.py  configsJetBot.json  configsJetBotServerUtils.py  configsJetBotUtils.py  configsUtils.py  main.py  simpleTestClientSocket.py  socketConnectionHandler.py  socketServerWrapper.py
ROS/: jetbot_start.sh
ROS/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/driver_mpu9250/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/driver_mpu9250/src/: calibration.cpp  calibration.h  driver.cpp  driver.h  main_rpi.cpp  ros_node.cpp  ros_node.h  serial_driver.cpp  serial_driver.h
ROS/catkin_ws/src/imu_node/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/imu_node/src/: imu_publisher.cpp
ROS/catkin_ws/src/odometry_node/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/odometry_node/launch/: oddometry_node.launch
ROS/catkin_ws/src/odometry_node/scripts/: odometry_jetbot.py
ROS/catkin_ws/src/remote_control/: CMakeLists.txt  package.xml  setup.py
ROS/catkin_ws/src/remote_control/launch/: remote_client.launch  remote_server.launch
ROS/catkin_ws/src/remote_control/scripts/: Jetbot_Joystick.py  baseConfigs.py  configsJetBot.json  configsJetBotClient.json  main.py  remoteControlClient.py  remoteControlServer.py  test_encoder.py
ROS/catkin_ws/src/remote_control/src/remote_control/: BaseVideoService.py  configsJetBotUtils.py  (+2 more)
ROS/catkin_ws/src/serialNode/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/xv11_lidarDriver/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/xv11_lidarDriver/src/: neato_laser_publisher.cpp
ROS/docs/: links.txt
ROS/drafts/mpu9250/catkin_make/driver_mpu9250/: CMakeLists.txt
ROS/drafts/mpu9250/catkin_make/remote_control/: CMakeLists.txt  note.txt
ROS/drafts/mpu9250/catkin_make/remote_control/launch/: remote_client.launch
ROS/drafts/mpu9250/catkin_make/remote_control/src/remote_control/: CameraHttpServer.py  cameraServerController.py  configsJetBotUtils.py
ROS/projects/publishSubscribeSimple/: README.md
ROS/projects/serialNode/: README.md
ROS/projects/xv11_lidarDriver/: README.md
ROS/windows_utilities/: Jetbot_Joystick.py  joystickUtills.py  windows_get_ip.bat  windows_start.bat
jupyterNotebooks/collision_avoidance/: data_collection.ipynb  live_demo.ipynb  train_model_colabMeny.ipynb
jupyterNotebooks/google_colab/deepPiCar_reference/: End_to_end_lane_navigation.ipynb
jupyterNotebooks/google_colab/examples/: Ejemplo_TF_Meny1.ipynb  Predictor_ConsumoVehiculos.ipynb
(+10 files in other folders)
